# portfolio

1 ANO/: README  Trabalho Snake.py
2 ANO/C#/PPP/: CMakeLists.txt  README  doentes.txt  projeto.c  projeto_funcao.c  projeto_structs.h  registos.txt
2 ANO/C#/SO/: Makefile  README  backofficee.c  mobileuserr.c  systemmanagerr.c
2 ANO/Java/: Arte.java  Carrega.java  Ciencias.java  Desporto.java  Futebol.java  GUI.java  Main.java  Natacao.java  Perguntas.java  README  Ski.java  registoJogo.java  topJogadores.java
2 ANO/Python/: README
2 ANO/SQL/: BD.pptx  ProjetoBD.postman_collection (2).json  README  diagrama_projeto.json  projeto.py  script.txt  triggers.txt
3 ANO/C#/: ast.c  ast.h  gocompiler.l  gocompiler.y  semantics.c  semantics.h
Websites/: README.md  contador.js  index.html  scripts.js  styles.css
